--- a/backend/package.json
+++ b/backend/package.json
@@ -1,25 +1,38 @@
 {
-  "name": "backend",
+  "name": "rewear-backend",
   "version": "1.0.0",
+  "description": "Backend API for ReWear - Clothing Exchange Platform",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "keywords": [
+    "rewear",
+    "clothing",
+    "exchange",
+    "marketplace",
+    "sustainability"
+  ],
+  "author": "ReWear Team",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "@clerk/clerk-sdk-node": "^4.13.23",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
-    "express": "^5.1.0",
+    "express": "^4.18.2",
+    "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.3",
     "multer": "^2.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
+  },
+  "engines": {
+    "node": ">=16.0.0"
   }
 }
